# UniConv

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CMakeLists.txt  COPYING.LIB  DOCUMENTATION.md  Doxyfile  InputGB18030.txt  LICENSE  LightLogWriteImpl.h  LightLogWriteImpl.hpp  Logger.h  PROBLEM.md  README.MD  README_CN.md  Singleton.h  Singleton_fixed.h  THIRD_PARTY_LICENSES.md  TODO.MD  Test.cpp  Test_New.cpp  UniConv.cpp  UniConv.h  UniConv.sln  UniConv.vcxproj  UniConv.vcxproj.filters  UniConv_Fixed.cpp  common.cpp  common.h  convert_tools.h  convet_tools.cpp  encodings.inc  gbk_str.cpp  generate_test_files.py  main.cpp  outputUTF8.txt  utf16_str.cpp  utf8_str.cpp
MyIconvWrapper/: MyIconvWrapper.cpp  MyIconvWrapper.vcxproj  MyIconvWrapper.vcxproj.filters  UniConv.cpp  UniConv.h  pch.h
benchmarks/: CMakeLists.txt  bench_encoding.cpp
cmake/: BundleStaticLibs.cmake  ConfigureConfig.cmake  UniConvConfig.cmake.in  config.h.in
doc/: Chinese编码(GBK等).md  iconv.md  string_view.md  unicode.md  utf16BE UTF16LE等.md  常见编码简介.md
docs/: Chinese编  DOCUMENTATION_8md.html  FetchContent_Integration_Guide.md  LightLogWriteImpl_8h.html  LightLogWriteImpl_8h.js  LightLogWriteImpl_8h_source.html  README_8MD.html  Singleton_8h.html  Singleton_8h.js  Singleton_8h_source.html  Singleton__fixed_8h.html  Singleton__fixed_8h.js  Singleton__fixed_8h_source.html  UniConv_8cpp.html  UniConv_8cpp_source.html  UniConv_8h.html  UniConv_8h.js  UniConv_8h_source.html  annotated.html  annotated_dup.js  classLightLogWrite__Impl-members.html  classLightLogWrite__Impl.html  classLightLogWrite__Impl.js  classSingleton-members.html  classSingleton.html  classSingleton.js  classUniConv-members.html  classUniConv.html  classUniConv.js  classes.html  convert__tools_8h.html  convert__tools_8h.js  convert__tools_8h_source.html  convet__tools_8cpp.html  convet__tools_8cpp.js  convet__tools_8cpp_source.html  deprecated.html  dir_4264a838ab1e3be40083ab3fd46c1232.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+118 more)
docs/html/: Chinese编  DOCUMENTATION_8md.html  LightLogWriteImpl_8h.html  LightLogWriteImpl_8h_source.html  Logger_8h.html  Logger_8h_source.html  README_8MD.html  Singleton_8h.html  Singleton_8h_source.html  Test_8cpp.html  Test_8cpp_source.html  Test__New_8cpp.html  Test__New_8cpp_source.html  UniConv_8cpp.html  UniConv_8cpp_source.html  UniConv_8h.html  UniConv_8h_source.html  convert__tools_8h.html  convert__tools_8h_source.html  convet__tools_8cpp.html  convet__tools_8cpp_source.html  gbk__str_8cpp.html  gbk__str_8cpp_source.html  iconv_8h.html  iconv_8h_source.html  iconv_8md.html  main_8cpp.html  main_8cpp_source.html  md_doc_2Chinese编_07GBK等n_8h.html  md_doc_2iconv.html  md_doc_2unicode.html  md_doc_2常编简.html  sample__format_8md.html  unicode_8md.html  utf16BE_01UTF16LE等md.html  utf16__str_8cpp.html  utf16__str_8cpp_source.html  utf8__str_8cpp.html  utf8__str_8cpp_source.html  常
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_20.js  all_24.js  all_26.js  all_27.js  all_2a.js  all_2b.js  all_2c.js  (+99 more)
docs/latex/: Chinese编  DOCUMENTATION_8md.tex  LightLogWriteImpl_8h.tex  LightLogWriteImpl_8h_source.tex  README_8MD.tex  Singleton_8h.tex  Singleton_8h_source.tex  Singleton__fixed_8h.tex  Singleton__fixed_8h_source.tex  UniConv_8cpp.tex  UniConv_8cpp_source.tex  UniConv_8h.tex  UniConv_8h_source.tex  annotated.tex  classLightLogWrite__Impl.tex  classSingleton.tex  classUniConv.eps  classUniConv.tex  convert__tools_8h.tex  convert__tools_8h_source.tex  convet__tools_8cpp.tex  convet__tools_8cpp_source.tex  deprecated.tex  dir_4264a838ab1e3be40083ab3fd46c1232.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  gbk__str_8cpp.tex  gbk__str_8cpp_source.tex  group__ConversionUtilities.tex  group__CoreConversion.tex  group__ErrorHandling.tex  group__LocaleConversion.tex  group__LocaleToUTF16Conversion.tex  group__LoggingInternals.tex  group__LoggingMembers.tex  group__SystemEncoding.tex  group__UTF16EndiannessConversion.tex  group__UTF16ParametricConversion.tex  group__UTF16ToLocaleConversion.tex  group__UTF16ToUTF8Conversion.tex  (+30 more)
docs/search/: all_0.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_2a.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_30.js  all_31.js  all_33.js  all_34.js  all_35.js  all_36.js  all_37.js  all_38.js  all_39.js  all_3a.js  (+95 more)
examples/: CMakeLists.txt  branch_prediction_demo.cpp  encoding_validation_test.cpp  high_performance_demo.cpp  instance_usage_demo.cpp  integer_conversion_demo.cpp  lru_cache_demo.cpp  parallel_batch_demo.cpp  simple_demo.cpp  stage1_demo.cpp  zero_copy_demo.cpp
examples/fetchcontent_example/: CMakeLists.txt  main.cpp
include/: LightLogWriteImpl.h  UniConv.h  iconv.h
include/UniConv/: UniConv.h  encodings.inc
include/iconv/: iconv.h  localcharset.h
include/uniconv/: UniConv.h  encodings.inc
lib/: LightLogWriteImplLib.idb  LightLogWriteImplLib.lib  LightLogWriteImplLibd.lib  libiconv.lib  libiconv_1_17.idb  libiconv_1_17.lib  libiconv_1_17d.lib
log/: test_log.txt
src/: UniConv.cpp  iconv.c
test/: AllTests.cpp  diagnose_test.cpp  error_test.cpp  simple_test.cpp
testdata/: fix_utf8.py  gen_testdata.py  input_local.txt  input_utf16be.txt  input_utf16le.txt  input_utf8.txt  input_utf8_bom.txt  sample_format.md  sample_utf8.txt  utf16be.txt  utf16le.txt
testdata/output/: output_gbk.txt  output_gbk_to_wide.txt  output_utf-16le_to_local.txt  output_utf-16le_to_utf-8.txt  output_utf-8_to_utf-16be.txt  output_utf16be.txt  output_utf16le.txt  output_utf8_from_utf16le.txt
tests/: CMakeLists.txt  test_basic.cpp  test_encoding_conversion.cpp  test_integer_conversion.cpp  test_robustness.cpp
vcpkg-port/: LOCAL_TEST_GUIDE.md  vcpkg.json
(+2 files in other folders)
